RESOLVED FIXED 260023
[GTK][WPE] Fix clang warning in `WebKitDownloadClient::legacyDidCancel()`
https://bugs.webkit.org/show_bug.cgi?id=260023
Summary [GTK][WPE] Fix clang warning in `WebKitDownloadClient::legacyDidCancel()`
Vitaly Dyackhov
Reported 2023-08-10 05:20:09 PDT
/var/home/phil/WebKit/Source/WebKit/UIProcess/API/glib/WebKitDownloadClient.cpp:114:10: warning: 'legacyDidCancel' overrides a member function but is not marked 'override' [-Winconsistent-miss ing-override] void legacyDidCancel(WebKit::DownloadProxy&) ^ /var/home/phil/WebKit/Source/WebKit/UIProcess/API/APIDownloadClient.h:66:18: note: overridden virtual function is here virtual void legacyDidCancel(WebKit::DownloadProxy&) { } ^ 1 warning generated.
Attachments
Vitaly Dyackhov
Comment 1 2023-08-10 05:23:17 PDT
EWS
Comment 2 2023-08-10 15:34:42 PDT
Committed 266786@main (26d006a96ab6): <https://commits.webkit.org/266786@main> Reviewed commits have been landed. Closing PR #16563 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.