Cherry-pick 266786@main (26d006a96ab6). https://bugs.webkit.org/show_bug.cgi?id=260023

[GTK][WPE] Fix clang warning in `WebKitDownloadClient::legacyDidCancel()`
    https://bugs.webkit.org/show_bug.cgi?id=260023

    Reviewed by Philippe Normand.

    `WebKitDownloadClient::legacyDidCancel()` should be marked as `override`.

    * Source/WebKit/UIProcess/API/glib/WebKitDownloadClient.cpp:

    Canonical link: https://commits.webkit.org/266786@main